fixup! Introduce SupportsARIAExpanded() for aria-expanded

Chrome/VoiceOver didn't narrates `aria-expanded` state in latest code.
We fix from AriaRoleAttribute() to RoleValue() in SupportsARIAExpanded.

Bug: 824465
Change-Id: Ib9ded5bbf84ad59f96cd2eb06cdd18eb537d8224
Reviewed-on: https://chromium-review.googlesource.com/989633
Commit-Queue: Nektarios Paisios <nektar@chromium.org>
Reviewed-by: Nektarios Paisios <nektar@chromium.org>
Reviewed-by: Aaron Leventhal <aleventhal@chromium.org>
Cr-Commit-Position: refs/heads/master@{#548140}
Former-commit-id: cd1f4d368d244d5cc94a9e6928f79e76c7032e25